Set text color white in app header

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -2,5 +2,9 @@ $primary: #d2451e;
 $white: #f3f2ea;
 .app-header {
     background-color: $primary;
-    color: $white;
+    .app-name, .app-search, .app-modulesbar {
+        * {
+            color: $white !important;
+        }
+    }
 }
