--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,8 @@
 .app-header {
   background-color: #d2451e;
-  color: #f3f2ea;
+}
+
+.app-header .app-name *, .app-header .app-search *, .app-header .app-modulesbar * {
+  color: #f3f2ea !important;
 }
 /*# sourceMappingURL=style.css.map */
