--- a/assets/style.scss
+++ b/assets/style.scss
@@ -2,9 +2,10 @@ $primary: #d2451e;
 $white: #f3f2ea;
 .app-header {
     background-color: $primary;
-    .app-name, .app-search, .app-modulesbar {
-        &, * {
-            color: $white !important;
-        }
+    .app-name,
+    .app-search ::placeholder,
+    .app-search i,
+    .app-modulesbar {
+        color: $white !important;
     }
 }
