More css targeting fixes

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -5,7 +5,7 @@ $white: #f3f2ea;
     .app-name,
     .app-search ::placeholder,
     .app-search i,
-    .app-modulesbar {
+    .app-modulesbar * {
         color: $white !important;
     }
 }
