--- a/assets/style.css
+++ b/assets/style.css
@@ -33,4 +33,8 @@
 .app-modulesbar > li > .uk-active:after {
   border-bottom-color: #ffd17f;
 }
+
+.app-logo {
+  background-image: url("https://res.cloudinary.com/heavy-craft/image/upload/v1565220597/Heavy%20Craft/monogram_no-hex_white-32x23.png");
+}
 /*# sourceMappingURL=style.css.map */
