--- a/assets/style.scss
+++ b/assets/style.scss
@@ -16,5 +16,6 @@ $warning: #ffd17f;
 }
 
 .app-logo {
+    background-position: center;
     background-image: url('https://res.cloudinary.com/heavy-craft/image/upload/v1565220597/Heavy%20Craft/monogram_no-hex_white-32x23.png');
 }
