--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,7 @@
 }
 
 .app-logo {
+  background-position: center;
   background-image: url("https://res.cloudinary.com/heavy-craft/image/upload/v1565220597/Heavy%20Craft/monogram_no-hex_white-32x23.png");
 }
 /*# sourceMappingURL=style.css.map */
