--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap");
+html, body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 .app-header {
   background-color: #d2451e;
 }
