--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,6 +1,13 @@
 $primary: #d2451e;
 $white: #f3f2ea;
 $warning: #ffd17f;
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
+
+html, body {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
 .app-header {
     background-color: $primary;
     .app-name,
