--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@ html, body {
 }
 
 cp-fieldcontainer label {
+  font-size: 18px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -43,6 +44,10 @@ cp-fieldcontainer label {
   color: #f3f2ea !important;
 }
 
+.app-header .app-name {
+  font-size: 18px;
+}
+
 .app-header .app-modulesbar > li > .uk-active:after {
   border-bottom-color: #ffd17f;
 }
@@ -54,5 +59,14 @@ cp-fieldcontainer label {
 
 .app-header .autocomplete input[type="text"] {
   font-weight: bold;
+}
+
+.uk-text-small {
+  font-size: 14px;
+}
+
+h3, .uk-h3 {
+  font-size: 32px;
+  line-height: 1.1;
 }
 /*# sourceMappingURL=style.css.map */
