--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|&display=swap");
 html, body {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 cp-fieldcontainer label {
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .app-header {
@@ -63,6 +63,12 @@ cp-fieldcontainer label {
 
 .uk-text-small {
   font-size: 14px;
+}
+
+.uk-badge {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  padding: 3px 12px;
 }
 
 h3, .uk-h3 {
