--- a/assets/style.scss
+++ b/assets/style.scss
@@ -28,6 +28,7 @@ cp-fieldcontainer label {
 
     .app-name {
         font-size: 18px;
+        font-family: $family-body;
     }
 
     .app-modulesbar > li > .uk-active:after {
