Remove top border from app header

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -18,6 +18,7 @@ cp-fieldcontainer label {
 
 .app-header {
     background-color: $primary;
+    border-top-width: 0;
     .app-name,
     .app-search ::placeholder,
     .app-search i,
