--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ cp-fieldcontainer label {
 }
 
 .app-header .app-modulesbar .uk-dropdown li:hover, .app-header .app-modulesbar .uk-dropdown li a:hover {
-  color: #f3f2ea;
+  color: #f3f2ea !important;
 }
 
 .app-header .app-modulesbar .uk-dropdown li.uk-nav-header {
