--- a/assets/style.scss
+++ b/assets/style.scss
@@ -75,3 +75,10 @@ cp-field[type=modulelink] {
         margin-top: 1em;
     }
 }
+
+cp-field[type=repeater] {
+    raw[content] {
+        text-transform: none;
+        font-style: italic;
+    }
+}
