--- a/assets/style.css
+++ b/assets/style.css
@@ -102,4 +102,9 @@ h3, .uk-h3 {
 cp-field[type=modulelink] p {
   margin-top: 1em;
 }
+
+cp-field[type=repeater] raw[content] {
+  text-transform: none;
+  font-style: italic;
+}
 /*# sourceMappingURL=style.css.map */
