--- a/assets/style.scss
+++ b/assets/style.scss
@@ -94,7 +94,7 @@ cp-field[type=modulelink] {
 }
 
 cp-field[type=repeater] {
-    [content] {
+    raw[content] {
         text-transform: none;
         font-style: italic;
     }
