--- a/assets/style.scss
+++ b/assets/style.scss
@@ -97,5 +97,6 @@ cp-field[type=repeater] {
     raw[content] {
         text-transform: none;
         font-style: italic;
+        margin-right: 0.5em;
     }
 }
